k8s/l3v5h/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: l3v5h
spec:
  rules:
    - http:
        paths:
          - path: /reservation/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: reservations
                port:
                  number: 3000
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth
                port:
                  number: 3001
